Set 'overflow: hidden' on page-wrapper div to prevent rubber-band scroll

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,6 +10,7 @@ body {
 
 div.page-wrapper {
 	height: 100%;
+	overflow: hidden;
 	width: 100%;
 }
 
